updated app spacing to avoid footer

--- a/server/client/src/App.css
+++ b/server/client/src/App.css
@@ -1,6 +1,10 @@
 .App {
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
+  justify-content: space-between;
 }
 
 .App-logo {
